--- a/AndroidStudioProjects/Todo/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/Todo/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/_9875349_transformed"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/_9875349_transformed"
         android:supportsRtl="true"
         android:theme="@style/Theme.ToDo"
         tools:targetApi="31" >
